[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Buttonquiz.png" type="Texture" id=1]
[ext_resource path="res://assets/newBackClass.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Minecraftia-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Script/Quizbutton.gd" type="Script" id=4]
[ext_resource path="res://Script/CanvasLayer_calculadora.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[node name="Node2D2" type="Node2D"]
script = ExtResource( 4 )

[node name="NewFundoSchool" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 0.666667, 0.666667 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Buttonquiz" type="Sprite" parent="."]
position = Vector2( 517, 628 )
scale = Vector2( 1.27451, 0.407 )
texture = ExtResource( 1 )

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 354.0
margin_top = 614.0
margin_right = 774.0
margin_bottom = 671.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Grande variedade de ativos	"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 309.0
margin_top = 439.0
margin_right = 1186.0
margin_bottom = 594.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttonquiz2" type="Sprite" parent="."]
position = Vector2( 943, 628 )
scale = Vector2( 1.28922, 0.39011 )
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
margin_left = 848.0
margin_top = 613.0
margin_right = 1220.0
margin_bottom = 662.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Alta Volatilidade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="errado" type="Button" parent="."]
show_behind_parent = true
margin_left = 322.0
margin_top = 609.0
margin_right = 717.0
margin_bottom = 657.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="certo" type="Button" parent="."]
show_behind_parent = true
margin_left = 781.0
margin_top = 605.0
margin_right = 889.0
margin_bottom = 659.0
rect_scale = Vector2( 3, 1 )
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CanvasLayer" parent="." instance=ExtResource( 5 )]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="pressed" from="errado" to="." method="_on_errado_pressed"]
[connection signal="pressed" from="certo" to="." method="_on_certo_pressed"]
